# pokedex

./: README.md  pyproject.toml
pokedex/: NotionSync.py  PokeCard.py  PokeDex.py
