[tool.poetry]
name = "pokedex"
version = "0.1.0"
description = ""
authors = ["Elaine Liu <eliu72@uwo.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
